--- a/1-course-slides/1-intro.Rmd
+++ b/1-course-slides/1-intro.Rmd
@@ -118,31 +118,31 @@ Ethical code for psychology research: Explicit aknowledgement of limitations
 ## Contact, office hours, & master theses
 
 \fontsize{8pt}{12}\selectfont
-**Contact**: Moodle or mail to: \color{blue} luca.menghini@unipd.it \color{black} \newline __Office hours__: \color{red} TO DO \color{black} \newline __Where__: Psico 1 pink building, ground floor, between the computer rooms \newline We can also schedule Zoom meetings
+**Contact**: Moodle or mail to: \color{blue} luca.menghini@unipd.it \color{black} \newline __Office hours__: Wednesday 3.30 PM - 5.30 PM \newline __Where__: Psico 1 pink building, ground floor, between the computer rooms \newline We can also schedule Zoom meetings
 
 ```{r , echo = FALSE, out.width = "120px",fig.align="center"}
 knitr::include_graphics("img/office.PNG")
 ```
 
-**Theses**: As a contracted professor, I can only accept up to two master students \newline __Ongoing projects__: Ambulatory: Workaholism daily diary; \newline In-lab: ECG smart t-shirt, rumination & response inhibition
+**Theses**: As a contracted professor, I can only accept up to 2 master students \newline __Ongoing projects__: Ambulatory: Workaholism daily diary; \newline In-lab: ECG smart t-shirt, rumination & response inhibition
 
 # The course
 
 ## Advanced data analysis for psychological science
 
 \fontsize{7.5pt}{12}\selectfont
-This course aims at providing basic notions of **multi-level & multi-variate** linear regression modeling, focusing on applications in developmental, educational, and applied psychology. 
+This course aims at providing basic notions of **multi-level & multi-variate** linear regression modeling, focusing on applications in developmental, educational, and applied psychology. \newline
 
-The course aims at transmitting **basic knowledge** on *linear mixed-effects regression* (LMER) and two common examples of multivariate techniques within the structural equation modeling (SEM) framework, namely *path analysis* & *confirmatory factor analysis* (CFA).
+The course aims at transmitting **basic knowledge** on *linear mixed-effects regression* (LMER) and two common examples of multivariate techniques within the structural equation modeling (SEM) framework, namely *path analysis* & *confirmatory factor analysis* (CFA). \newline
 
-The course also aims at providing **practical competences** on advanced data analysis, with a particular emphasis on data preparation and pre-processing, model fit, evaluation, and selection criteria, coefficient interpretation, and data visualization. 
+The course also aims at providing **practical competences** on advanced data analysis, with a particular emphasis on data preparation and pre-processing, model fit and evaluation, coefficient interpretation, and data visualization. Also, we'll try to **understand the results reported in published papers**. \newline
 
-The course is characterized by an **applied approach** that prioritizes real case studies and includes practical exercises using R.
+The course is characterized by an **applied approach** that prioritizes real case studies and includes **practical exercises** (optional) using R.
 
 ## Prerequisites
 
-\fontsize{9pt}{12}\selectfont
-Students should have good knowledge about basic concepts linked to probability theory and associated topics (e.g., random variables, probability distributions, hypothesis testing), including **linear regression modeling**.
+\fontsize{9.5pt}{12}\selectfont
+Students should have good knowledge about basic concepts linked to probability theory and associated topics (e.g., random variables, probability distributions, hypothesis testing), including **linear regression modeling** (but we will review that).
 
 ## Course contents
 
@@ -161,9 +161,9 @@ Students should have good knowledge about basic concepts linked to probability t
 
 4. Model fit & random effects `r fontawesome::fa(name = "r-project", height = "1em")`
 
-5. Model evaluation & selection `r fontawesome::fa(name = "r-project", height = "1em")`
+5. Coefficient interpretation `r fontawesome::fa(name = "r-project", height = "1em")`
 
-6. Coefficient interpretation `r fontawesome::fa(name = "r-project", height = "1em")`
+6. Model evaluation & selection `r fontawesome::fa(name = "r-project", height = "1em")`
 
 7. \color{blue} Generalized models `glmer()`, Bayesian LMER, power analysis `r fontawesome::fa(name = "microscope", fill = "blue", height = "1em")` \newline \newline
   
@@ -183,14 +183,14 @@ Students should have good knowledge about basic concepts linked to probability t
 
 12. Coefficient interpretation `r fontawesome::fa(name = "r-project", height = "1em")`
 
-13. Latent variables & CFA
-
-14. Full SEM pipeline `r fontawesome::fa(name = "r-project", height = "1em")`
+13. Latent variables & CFA `r fontawesome::fa(name = "r-project", height = "1em")`
 
 15. \color{blue} Multilevel SEM, Bayesian SEM, power analysis `r fontawesome::fa(name = "microscope", fill = "blue", height = "1em")` \newline \newline
 
   \endcol
 \endcols
+
+\color{red} The course program will end where we arrive. \color{black}
 
 ___ \newline \fontsize{6pt}{12}\selectfont
 `r fontawesome::fa(name = "r-project", height = "1em")` = Practical exercise sessions with R (bring your PC!) \newline `r fontawesome::fa(name = "microscope", fill = "blue", height = "1em")` \color{blue} = In-depth topics (not for the exam!)
@@ -262,21 +262,21 @@ knitr::include_graphics("img/books.PNG")
 ## Course slides
 
 \fontsize{9pt}{12}\selectfont
-The course slides are structured by intermixing theory, R code, plots, examples, and exercises.
+The course slides are structured by intermixing theory, R code, plots, examples, and exercises. The slides are *dense* but we'll stay on each slide as long as needed ;) \newline
 
-The R code used in any exercise/example is also provided.
+The R code used in any exercise/example is also provided. \newline
 
-Slides and sentences with the \color{blue}microscope `r fontawesome::fa(name = "microscope", fill = "blue", height = "1em")` \color{black}icon cover in-depth but still useful topics that will be possibly presented but are not part of the core course topics and related exam!
+\color{blue} Slides and sentences with the microscope `r fontawesome::fa(name = "microscope", fill = "blue", height = "1em")` \color{black}icon cover in-depth but still useful topics that will be possibly presented but are not part of the core course topics and **not required for the exam**! \newline
 
 All course materials can be accessed from Moodle __*and*__ from \color{blue} https://github.com/Luca-Menghini/advancedDataAnalysis-course \color{black}
 
-## Additional resources
+## Additional resources & extra slides
 
 \fontsize{9pt}{12}\selectfont
-Additional resources that are not presented during classes will be also available from Moodle. These will include published papers and online resources, R code and exercises, extra slides, and other.
+Additional resources that are not presented during classes will be also available from Moodle and Github. These will include published papers and online resources, R code and exercises, extra slides, and other. \newline
 
 \fontsize{8pt}{12}\selectfont
-For instance, you can already find the `R-intro.pdf` extra slides (introduction to R), and you can already give a look at the "Latent Variable Modeling using R" book website (e.g., "R syntax" section): \color{blue} https://blogs.baylor.edu/rlatentvariable/ \color{black}
+For instance, you can already find the `R-intro.pdf` extra slides (introduction to R), and you can already give a first look at the "Latent Variable Modeling using R" book website (e.g., "R syntax" section): \color{blue} https://blogs.baylor.edu/rlatentvariable/ \color{black} \newline
 
 \fontsize{9pt}{12}\selectfont
 **PSICOSTAT meetings & workshops**:
@@ -410,9 +410,7 @@ knitr::include_graphics("img/chatGPT.PNG")
 \fontsize{7pt}{12}\selectfont
 **Extra slides on Moodle/GitHub**
 
-- `extra/R-intro.pdf`: How to install and get started with `R` and `RStudio`, elementary commands, `R` objects, functions, and workspace, how to read and export datasets, `R` graphics, and linear models
-
-- `extra/ggplot2-intro.pdf`: Introduction to the `ggplot2` package for advanced graphics
+- `extra/R-intro.pdf`: How to install and get started with `R` and `RStudio`, elementary commands, `R` objects, functions, and workspace, how to read and export datasets, `R` graphics, and linear models. \color{blue} [Link to extra slides](https://github.com/Luca-Menghini/advancedDataAnalysis-course/blob/main/2-extra-slides/R-intro.pdf) \color{black}
 
 \fontsize{7pt}{12}\selectfont
 **Free tutorials**
@@ -429,11 +427,22 @@ knitr::include_graphics("img/chatGPT.PNG")
 The course uses several packages with customized and optimized functions. Here are the main packages used in the course (and the code to install all of them):
 ```{r , eval=FALSE}
 pckg <- c("lme4","lavaan", # model fit
-          "MuMIn","sjPlot", # model outputs
-          "plyr") # data preparation
+          "MuMIn","sjPlot","knitr" # model outputs & visualization
+          "ggplot2","gridExtra" # visualization
+          "plyr", # data preparation
+          "lmtest","influence.ME","lattice","osfr") # other
 install.packages(pckg)
 ```
 
+To install a single package, just run:
+```{r , eval=FALSE}
+install.packages("package_name")
+```
+
+To load an installed package:
+```{r , eval=FALSE}
+library("package_name")
+```
 
 ## Some key `r fontawesome::fa(name = "r-project",fill="#3333B2", height = "1em")` functions used in the course
 
@@ -488,10 +497,10 @@ knitr::kable(standardizedsolution(fit)[1:7,1:4],digits=2)
 
 # The exam
 
-## When & where
+## When & where (to be updated!)
 
-\fontsize{9pt}{12}\selectfont
-All exam sessions will take place in the Psico 2 gray building, room 3L \newline Via Venezia 12, Padova - 35131
+\fontsize{9pt}{12}\selectfont \color{red}
+Note: These are the current dates and places for the exam, but they will probably change as I asked moving to a room with computers (the exam will be done on Moodle) \newline &rightarrow; **Check the \color{blue} [annoucements on Moodle](https://psico.elearning.unipd.it/mod/forum/view.php?id=192277) \color{red} for keeping updated** \color{black}
 
 ```{r , echo = FALSE, out.width = "320px"}
 knitr::include_graphics("img/white.PNG")
@@ -506,7 +515,7 @@ knitr::kable(data.frame(Session=paste(1:5,c("Jan","Feb","Jun","Jul","Sept"),sep=
 ## Exam structure & contents
 
 \fontsize{8pt}{12}\selectfont
-The final exam will be **written** and will last **40 minutes**. \newline The exam will consist of **31 closed-ended questions** on:
+The final exam will be **written**, computerized (on Moodle), and will last **40 min**. The exam will consist of **31 closed-ended (multi-choice) questions** on:
 
 - theoretical topics covered by the course 
 
@@ -514,7 +523,7 @@ The final exam will be **written** and will last **40 minutes**. \newline The ex
 
 - interpretation of paper results \newline
 
-__Exam contents__: The contents required by the exam are exhaustively \newline covered in \color{red}the [main course slides](#slides)\color{black}.
+__Exam contents__: The contents required by the exam are exhaustively \newline covered in \color{red}the [main course slides](#slides)\color{black}. Note that the required contents will \color{red} depend on where we arrive \color{black at the end of the course \newline \color{black}
 
 __Exam scores__: The exam score will be computed as the sum of the scores obtained to the 31 questions (right answer = 1; wrong/missing answer = 0; \newline 18+ right answers = exam passed; 31 right answers = 30 cum laude). \newline
 
@@ -527,7 +536,7 @@ More information about the final exam will be provided later, along with an exam
 - **Theoretical topics**: \newline \fontsize{7pt}{12}\selectfont \color{blue} _What does "ME" mean in the "LMER" achronym?_ \color{black} \newline Mean Effect | Mixed Effects | Multilevel Effects | Multivariate Errors \newline \color{blue} _Which of the following is a fixed effect?_ \color{black} \newline Intercept | Residual variance | Cluster variance | None
 
 \fontsize{8pt}{12}\selectfont
-- **Output interpretation**: \newline \fontsize{7pt}{12}\selectfont \color{blue} _Which is the variance of the random slope?_ \newline \color{black} 0.75 | 0.76 | 2.85 | Not shown \newline \color{blue} _Which of the following random effects are shown in the table?_ \newline \color{black} Random slope | R. Intercept & residuals | Residuals & R. slope | None
+- **Output interpretation**: \newline \fontsize{7pt}{12}\selectfont \color{blue} _Which is the variance of the random slope in the following table?_ \newline \color{black} 0.75 | 0.76 | 2.85 | Not shown \newline \color{blue} _Which of the following random effects are shown in the table?_ \newline \color{black} Random slope | R. Intercept & residuals | Residuals & R. slope | None
 ```{r , echo = FALSE, warning=FALSE, message=FALSE, comment=NA, results=FALSE}
 library(lme4); library(sjPlot); library(html2latex)
 fit <- lmer(extra ~ group + (1|ID),data=sleep)
@@ -596,9 +605,9 @@ _**Structural equation model (SEM)**_ \newline = measurement + structural model
 \fontsize{7pt}{12}\selectfont 
 **Linear regression models** allow to determinate the link between two variables \newline as expressed by a linear function: \fontsize{10pt}{12}\selectfont \color{violet} $y_i = \beta_0 + \beta_1 x_i + \epsilon_i$ \fontsize{7pt}{12}\selectfont \color{black} 
 
-Such a function can be graphically represented as a **straight line** where \newline \color{violet} $\beta_0$ \color{black} is the **intercept** (value assumed by `y` when `x` = 0) \newline \color{violet} $\beta_1$ \color{black} is the  **slope** (predicted change in `y` when `x` increases by 1 unit) \newline \color{violet} $\epsilon_i$ \color{black} is the **residual variance** (distance between the observation $i$ and the regression line)
+Such a function can be graphically represented as a **straight line** where \newline \color{violet} $\beta_0$ \color{black} is the **intercept** (value assumed by `y` when `x` = 0) \newline \color{violet} $\beta_1$ \color{black} is the  **slope** (predicted change in `y` when `x` increases by 1 unit) \newline \color{violet} $\epsilon_i$ \color{black} is the **error** (distance between observation *i* and the regression line) 
 
-```{r echo=FALSE,fig.width=4,fig.height=1.8,out.width="200px",fig.align='center'}
+```{r echo=FALSE,fig.width=4,fig.height=2,out.width="200px",fig.align='center'}
 par(mar=c(0, 4, 0, 2) + 0.1,mai = c(0.8, 0.7, 0, 0.7))
 x <- rnorm(n = 100)
 y <- x + rnorm(n = 100)
@@ -634,7 +643,7 @@ The **measurement model** clarifies the relationships \color{violet} $\Lambda$ \
 ## Multilevel models: Let the visuals talk
 
 \fontsize{8pt}{12}\selectfont
-**Visual introduction to multilevel modeling**: \color{blue} \fontsize{5.5pt}{12}\selectfont http://mfviz.com/hierarchical-models \fontsize{8pt}{12}\selectfont \color{black} 
+**Visual introduction to multilevel modeling**: \color{blue} \fontsize{5.5pt}{12}\selectfont \newline http://mfviz.com/hierarchical-models \fontsize{8pt}{12}\selectfont \color{black} \newline
 
 **Between & Within** \newline \fontsize{7pt}{12}\selectfont
 When a random variable $y$ is measured from multiple data points per subject (or group), multilevel modeling **partition the $y$ variance** into the *within-subject* (level 1) & *between-subject* (level 2) components. \newline The same applyes when multiple individuals (e.g., students) are nested within a number of groups (e.g., schools) &rightarrow; *within-group* vs. *between-group*
@@ -653,12 +662,12 @@ ggplot(df,aes(x=time,y=Work.Stress,color=Subject)) +
 ## Multilevel models: Fixed vs. Random effects
 
 \fontsize{8pt}{12}\selectfont
-In the literature, multilevel modeling is sometimes called with different terms, \newline \fontsize{6pt}{12}\selectfont e.g., *hierarchical linear modeling*, *random slope models*, *variance component models*, ...
+In the literature, multilevel modeling is sometimes called with different terms, \newline \fontsize{6pt}{12}\selectfont e.g., *hierarchical linear modeling*, *random slope models*, *variance component models*, ... \newline
 
 \fontsize{8pt}{12}\selectfont
 All these models are part of the broader \color{violet} \fontsize{9pt}{12}\selectfont __*mixed-effects models*__ \color{black} \fontsize{8pt}{12}\selectfont family, \newline identifying models with both fixed and random effects:
 
-- **Fixed effects**: effects that remains constant across all clusters, whose *levels* are exhaustively considered (e.g., gender, levels of a Likert scale) and generally controlled by the researcher (e.g., experimental conditions)
+- **Fixed effects**: effects that remains constant across all clusters, whose *levels* are exhaustively considered (e.g., gender, levels of a Likert scale) and generally controlled by the researcher (e.g., experimental conditions) \newline
 
 - **Random effects**: effects that vary from cluster to cluster, whose *levels* are randomly sampled from a population (e.g., schools, participants, days, experimental stimuli)
 
@@ -831,20 +840,20 @@ knitr::include_graphics("img/white.png")
   \endcol
 \endcols
 
-## To be continued...
+## That's all for now!
 
-- Any question?
+- Any question? \newline
 
-- Next lecture: LM recap
+- Next lecture: LM recap, ok? \newline
 
-- Needed recap on how to use R?
+- Needed a recap on how to use R?
 
 # Resources
 
 ## Credits
 
 \fontsize{8pt}{12}\selectfont
-The present slides are partially based on: \fontsize{6pt}{12}\selectfont
+The present slides are partially based on:
 
 - Altoè, G. (2023) Corso Modelli lineari generalizzati ad effetti misti - 2023. \color{blue} https://osf.io/b7tkp/ \color{black}
 
@@ -856,7 +865,7 @@ The present slides are partially based on: \fontsize{6pt}{12}\selectfont
 
 ## Useful resources: Multilevel
 
-\fontsize{6pt}{12}\selectfont
+\fontsize{7pt}{12}\selectfont
 - Baayen, R. H., Davidson, D. J., & Bates, D. M. (2008). Mixed-effects modeling with crossed random effects for subjects and items. *Journal of memory and language, 59*(4), 390-412.
 
 - Bliese, P. (2022). Multilevel modeling in R (2.7). \color{blue}https://cran.r-project.org/doc/contrib/Bliese_Multilevel.pdf \color{black}
@@ -867,7 +876,7 @@ The present slides are partially based on: \fontsize{6pt}{12}\selectfont
 
 ## Useful resources: Multivariate
 
-\fontsize{6pt}{12}\selectfont
+\fontsize{8pt}{12}\selectfont
 - Kline, R.B. (2005). Principles and Practice of Structural Equation Modeling. Guilford Press, NY.
 
 - Lin, J. Introduction to structural equation modeling (SEM) in R with lavaan. \color{blue} https://stats.oarc.ucla.edu/r/seminars/rsem/ \color{black}
