--- a/2-extra-slides/R-intro.Rmd
+++ b/2-extra-slides/R-intro.Rmd
@@ -44,7 +44,7 @@ library(Cairo)
 
 1. Download `R` from \color{blue}https://www.r-project.org/ \color{black} \newline CRAN (*Comprehensive R Archive Network*): network of servers that provide upated software versions and related documentation
 
-2. Select \color{blue}[CRAN](https://cran.r-project.org/mirrors.html) \color{black} from the *Download* menu on the left, then select a mirror mirror (e.g., \color{blue}[the first](https://cloud.r-project.org/) \color{black} or \color{blue}[the uniPD' one](https://cran.stat.unipd.it/)\color{black}), then select your OS (Linux, MacOS, or Windows)
+2. Select \color{blue}[CRAN](https://cran.r-project.org/mirrors.html) \color{black} from the *Download* menu on the left, then select a mirror mirror (e.g., \color{blue}[the first](https://cloud.r-project.org/) \color{black} or \color{blue}[the uniPD's one](https://cran.stat.unipd.it/)\color{black}), then select your OS (Linux, MacOS, or Windows)
 
 3. Install `R` by opening the downloaded `.exe` (Windows) or `.pkg` (MacOS) or by following the commands required by your Linux version
 
@@ -65,7 +65,7 @@ knitr::include_graphics("img/baseR.PNG")
 ## RStudio
 
 \begincols
-  \begincol{.5\textwidth}
+  \begincol{.4\textwidth}
 
 \fontsize{7.5pt}{12}\selectfont
 `RStudio` is a development environment for `R` using an **optimized graphical interface** to make it more simple (e.g., accessing files, objects, plots, datasets, etc.).
@@ -73,7 +73,7 @@ knitr::include_graphics("img/baseR.PNG")
 It was founded in 2009 by J. J. Allaire (written in Java and C++) and is managed and developed by an international research group. Like `R`, it is **free and open-source** (GNU General Public Licence) + paid premium versions.
 
   \endcol
-\begincol{.5\textwidth}
+\begincol{.6\textwidth}
 
 \fontsize{7.5pt}{12}\selectfont
 
@@ -307,7 +307,7 @@ Some functions return a single value from a vector of values.
 ```{r }
 length(y) # return the number of vector elements
 ```
-For instance, those functions computing **descriptive statistics**:
+For instance, functions that compute **descriptive statistics**:
 ```{r }
 sum(y) # sum the elements of y
 max(y) # maximum value
@@ -449,13 +449,13 @@ matrix(c("Mar","Mau","Ter","Car"), nrow = 2)
 
   \fontsize{6pt}{12}\selectfont
 
-To **select 1+ values** from a matrix, we use again **squred brakets**, but this time we use the sintax `matrix_name[row_number, col_number]`.
+To **select 1+ values** from a matrix, we use again **squared brackets**, but this time we use the syntax \color{blue} `matrix_name[row_number, col_number]` \color{black}
 ```{r }
 x[1,2] # 1st row, 2nd column
 x[2,1] # 2nd row, 1st column
 x[1:3,2] # rows 1-3, second column
 x[1,] # 1st row, all columns
-x[,2] # 2nd column, all raws
+x[,2] # 2nd column, all rows
 ```
 
   \endcol
@@ -634,6 +634,27 @@ x[[3]][2,1]
   \endcol
 \endcols
 
+## Hands on `r fontawesome::fa(name = "r-project", fill="#3333B2",height = "1em")`
+
+\fontsize{7.5pt}{12}\selectfont
+There are 5 students (Gina, Pina, Tina, Maria, and Lina), each with a registration number (507, 535, 566, 955, 515) and a score at the exam (19, 27, 28, 25, 25). \newline \fontsize{5.5pt}{12}\selectfont Source: Pastore, M. (2021). Master's degree course on "Data analysis in community psychology". \newline \fontsize{7.5pt}{12}\selectfont
+
+1. Create 3 *vectors* including, respectively, students' name, serial numbers, and exam score
+
+2. Join the 3 vectors to create a *dataframe*
+
+3. Delete the 3 original *vectors* from the workspace \newline (only the dataframe should remain)
+
+4. Select and print Maria's grade
+
+5. Select the row including all the values belonging to Pina
+
+6. Select all students with exam score equal to 25 (you can also use the \color{blue} `subset()` \color{black} function - see \color{blue} `?subset`\color{black})
+
+7. Select all students with an exam score higher than 20 () (you can also use the \color{blue} `subset()`\color{black})
+
+8. Compute the mean and standard deviation of the exam scores
+
 # R workspace
 
 ## Functions & pakages
@@ -711,7 +732,7 @@ setwd("C:/Users/mengh/OneDrive/Desktop") # set new WD
 ## Reading & saving a dataset (1/2)
 
 \fontsize{7pt}{12}\selectfont
-The first step in any data analysis with R is to read a dataset and save it in the workspace. To do so, we need to use a specific function based on the data format (e.g., CSV, xlsx, txt, svs). The default R data format is RData.
+The first step in any data analysis with R is to read a dataset and save it in the workspace. To do so, we need to use a specific function based on the data format \newline (e.g., CSV, xlsx, txt, sav). The default R data format is RData.
 ```{r eval=FALSE}
 # file .RData
 load(file = "data/studqs.RData") # import
@@ -742,25 +763,25 @@ If you have doubts on the function to be used for reading a file, you can use th
 
 \color{blue} Hands on `r fontawesome::fa(name = "r-project", fill="blue",height = "1em")`: 
 
-- Open or create a file `.xlsx` on your PC, save it in a `.csv` (comma separated values) format and read it in R
-- Now try to directly read the `.xlsx` file (if you have doubts, just Google "*how to read xlsx file with R*" `r fontawesome::fa(name = "face-smile", fill="#3333B2",height = "1em")`)
-- In both cases, note the class and the structure of the imported object
+- \color{blue} Open or create a file `.xlsx` on your PC, save it in a `.csv` (comma separated values) format and read it in R
+- \color{blue} Now try to directly read the `.xlsx` file (if you have doubts, just Google "*how to read xlsx file with R*" `r fontawesome::fa(name = "face-smile", fill="#3333B2",height = "1em")`)
+- \color{blue} In both cases, note the class and the structure of the imported object
 
-## Hands on `r fontawesome::fa(name = "r-project", fill="#3333B2",height = "1em")`: Student questionnaire
+## Hands on `r fontawesome::fa(name = "r-project", fill="#3333B2",height = "1em")`: Course questionnaire
 
 \fontsize{6.5pt}{12}\selectfont
 
-1. Download the files `questionarioStudenti.RData` and `questionarioStudenti.csv` from \color{blue} [Github](https://github.com/Luca-Menghini/advancedDataAnalysis-course) \color{black} (`data` folder; select `File` > `Raw` > `Download` or right click > `Save as`) or \color{blue} [Moodle](https://psico.elearning.unipd.it/enrol/index.php?id=4700#section-0) \color{black} (data folder), save the file in a folder and set that folder as the working directory.
+1. Download the files `studqs.RData` and `studqs.csv` from \color{blue} [Github](https://github.com/Luca-Menghini/advancedDataAnalysis-course/) \color{black} (`4-data` folder; select `File` > `Raw` > `Download` or right click > `Save as`) or \color{blue} [Moodle](https://psico.elearning.unipd.it/enrol/index.php?id=4700#section-0) \color{black} ("Data" folder), save the file in a folder and set that folder as the working directory.
 
-3. Read both files with R: what are their class? What is the class of the included variables?
+3. Read both files with R: what are their class? What is the class of the variables included in each of them?
 
-4. Use the `describe()` function from the `psych` package to compute the descriptive statistics of the variable `numVar` and use the function `hist()` to visualize its histogram plot (try changing the argument `breaks`).
+4. Use the \color{blue} `describe()` \color{black} function from the \color{blue} `psych` \color{black} package to compute the descriptive statistics of the variable `numVar` and use the function \color{blue} `hist()` \color{black} to visualize its histogram plot (try changing the argument \color{blue}`breaks`\color{black}).
 
-5. Use the function `table()` to create a frequency table of the variable `Q02`
+5. Use the function \color{blue} `table()` \color{black} to create a frequency table of the variable `Q02` (i.e., "*On which weekday would you prefer to have the lectures?*")
 
-6. Repeat point #5 but only consider the students that replied "Sì" (yes) to the item `Q01`
+6. Repeat point #4 but only consider the students that replied "Sì" (yes) to the question `Q01` (i.e., "*Do you plan to attend all lectures?*")
 
-7. Cross the frequency of the variables `Q02` and `Q03` using `table()`
+7. Cross the frequency of the variables `Q02` and `Q03` (i.e., "*Will you participate even if the lectures will be on a different day than the one you prefer?*") using \color{blue} `table()`
 
 ## Descriptive statistics (univariate)
 
@@ -1123,14 +1144,14 @@ barplot(table(df),legend.text = TRUE,
 
 \fontsize{6pt}{12}\selectfont  
 ```{r fig.width=7,fig.height=3.5,out.width='80%',warning=FALSE,message=FALSE}
-par(mfrow = c(2,2), mai = c(0.5,1,0.2,0.5)) # using the sleep dataset (included in R base)
+par(mfrow = c(2,2), mai = c(0.5,1,0.2,0.5)) # setting graphical parameters
 barplot(tapply(sleep$extra, sleep$group, FUN=mean), # barplot for means (DON'T DO THAT!)
         main="DON'T DO THAT!",cex.main=1.5, ylab = "extra"); abline(a=0,b=1,col="red",lwd=2)
 hist(sleep[sleep$group==1,"extra"], breaks=10, col = rgb(0,0,1,alpha=0.5),  
      xlim = c(min(sleep$extra), max(sleep$extra)), xlab="", main="") # hist by group
 hist(sleep[sleep$group==2,"extra"], breaks=10, col = rgb(1,0,0,alpha=0.5), add = TRUE)
 boxplot(extra ~ group, data = sleep) # box plot by group
-library(vioplot); vioplot(extra ~ group, data = sleep) # violin plot: density by group
+vioplot::vioplot(extra ~ group, data = sleep) # violin plot: density by group
 ``` 
 
 ## Saving a plot
@@ -1170,6 +1191,22 @@ tiff() # Tagged Image File Format
 
   \endcol
 \endcols
+
+## Hands on `r fontawesome::fa(name = "r-project", fill="#3333B2",height = "1em")`
+
+\fontsize{6.5pt}{12}\selectfont
+
+1. Download and read the file `studqs.RData` (it's the same dataset used in the previous exercise)
+
+2. Generate the histogram of the variable `numVar` separately for those that replied "Sì" (*yes*) to question `Q01` ("*Do you plan to attend all lectures?*") and those that replied "Non a tutti" (*not all lectures*); add a vertical red line corresponding to the mean value of `numVar` for the two groups
+
+3. Generate a normal QQ plot of the variable `numVar`. Is it normally distributed?
+
+4. Generate the box plot of the variable `numVar` by the variable  `Q01`: which group has the highest median? Which has the hugest variability?
+
+5. Create a new variable `numVar2` corresponding to `numVar2 - 2 * rnorm(nrow(qs), sd = 20)`
+
+6. Generate the scatter plot of `numVar2` vs `numVar`, add the regression line with the \color{blue}`abline()`\color{black} function, and compute the correlation coefficient between the two variables
 
 # Linear models
 
@@ -1306,7 +1343,7 @@ qqline(residuals(m3), col="red")
 
 \fontsize{6.5pt}{12}\selectfont
 **Likelihood ratio test**: testing the ratio of the loglikelihood (probability of data functional to the parameter estimates) 
-```{r fig.width=8,fig.height=3.5}
+```{r fig.width=8,fig.height=3.5,warning=FALSE,message=FALSE}
 library(lmtest)
 lrtest(m0,m1,m2,m3)
 ```
@@ -1352,7 +1389,16 @@ plot(allEffects(m2))
 
 # Resources
 
-## Other resources: First steps with R
+## Credits
+
+\fontsize{8pt}{12}\selectfont
+The present slides are partially based on:
+
+- Pastore, M. (2015). Analisi dei dati in psicologia (e applicazioni in R). Il Mulino.
+
+- Zandonella, C., Gambarota, F. (2021). Introduction to R (in Italian). Corso per imparare le basi di R
+
+## Other resources/books introducing R
 
 \fontsize{6.5pt}{12}\selectfont
 - R Core Team. *The R Manuals*. Manuals in pdf format: https://cran.r-project.org/manuals.html (particularly: "*An Introduction to R (with many examples)*"; "*R Data Import/Export*")
